@@ -1,14 +1,14 @@
 ## Process this file with automake to produce Makefile.in.
-# Copyright (C) 2004 Free Software Foundation, Inc.
+# Copyright (C) 2004-2006 Free Software Foundation, Inc.
 #
 # This file is free software, distributed under the terms of the GNU
 # General Public License.  As a special exception to the GNU General
 # Public License, this file may be distributed as part of a program
-# that contains a configuration script generated by Automake, under
+# that contains a configuration script generated by Autoconf, under
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --aux-dir=. --libtool --macro-prefix=gl getopt iconvme inttostr localcharset pipe size_max stdint strverscmp wait-process xalloc xstrndup xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --aux-dir=build-aux --libtool --macro-prefix=gl getopt iconvme inttostr localcharset pipe size_max stdint strverscmp wait-process xalloc xstrndup xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits no-dependencies
 
@@ -24,6 +24,8 @@ MOSTLYCLEANFILES =
 CLEANFILES =
 DISTCLEANFILES =
 MAINTAINERCLEANFILES =
+
+AM_CPPFLAGS =
 
 ## begin gnulib module alloca-opt
 
