@@ -1,4 +1,5 @@
-# Copyright (C) 2004 Free Software Foundation, Inc.
+# Copyright (C) 2004-2006 Free Software Foundation, Inc.
+#
 # This file is free software, distributed under the terms of the GNU
 # General Public License.  As a special exception to the GNU General
 # Public License, this file may be distributed as part of a program
@@ -14,7 +15,7 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --aux-dir=. --libtool --macro-prefix=gl getopt iconvme inttostr localcharset pipe size_max stdint strverscmp wait-process xalloc xstrndup xvasprintf
+#   gnulib-tool --import --dir=. --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --aux-dir=build-aux --libtool --macro-prefix=gl getopt iconvme inttostr localcharset pipe size_max stdint strverscmp wait-process xalloc xstrndup xvasprintf
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
 gl_MODULES([getopt iconvme inttostr localcharset pipe size_max stdint strverscmp wait-process xalloc xstrndup xvasprintf])
