@@ -1,4 +1,5 @@
-# Copyright (C) 2004 Free Software Foundation, Inc.
+# Copyright (C) 2004-2006 Free Software Foundation, Inc.
+#
 # This file is free software, distributed under the terms of the GNU
 # General Public License.  As a special exception to the GNU General
 # Public License, this file may be distributed as part of a program
@@ -38,6 +39,7 @@ AC_DEFUN([gl_INIT],
   gl_LOCALCHARSET
   gl_PIPE
   gl_SIZE_MAX
+  gl_STDARG_H
   AM_STDBOOL_H
   gl_STDINT_H
   gl_FUNC_STRDUP
@@ -52,6 +54,7 @@ AC_DEFUN([gl_INIT],
   gl_XALLOC
   gl_XSIZE
   gl_XSTRNDUP
+  gl_XVASPRINTF
 ])
 
 # This macro records the list of files which have been installed by
@@ -147,6 +150,7 @@ AC_DEFUN([gl_FILE_LIST], [
   m4/signalblocking.m4
   m4/signed.m4
   m4/size_max.m4
+  m4/stdarg.m4
   m4/stdbool.m4
   m4/stdint.m4
   m4/stdint_h.m4
@@ -167,4 +171,5 @@ AC_DEFUN([gl_FILE_LIST], [
   m4/xalloc.m4
   m4/xsize.m4
   m4/xstrndup.m4
+  m4/xvasprintf.m4
 ])
